[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/gdUnit3/test/update/bbcodeView.gd" type="Script" id=1]
[ext_resource path="res://addons/gdUnit3/src/update/assets/fonts/RobotoMono-14.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/gdUnit3/src/update/assets/fonts/RobotoMono-14-bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/gdUnit3/src/update/assets/fonts/RobotoMono-14-italics.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/gdUnit3/src/update/assets/fonts/RobotoMono-14-bold-italics.tres" type="DynamicFont" id=5]
[ext_resource path="res://addons/gdUnit3/src/update/GdUnitUpdateClient.gd" type="Script" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="HSplitContainer"]
margin_right = 300.0
margin_bottom = 600.0
rect_min_size = Vector2( 300, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer"]
use_parent_material = true
margin_left = 312.0
margin_right = 1024.0
margin_bottom = 600.0
hint_tooltip = "test"
custom_fonts/mono_font = ExtResource( 2 )
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 4 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_constants/table_vseparation = 0
custom_constants/line_separation = 0
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GdUnitUpdateClient" type="Node" parent="."]
script = ExtResource( 6 )

[connection signal="text_changed" from="HSplitContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="meta_clicked" from="HSplitContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="meta_hover_ended" from="HSplitContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_hover_ended"]
[connection signal="meta_hover_started" from="HSplitContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_hover_started"]
